# tinyflix

./: README.md  install_ffmpeg.sh
tinyflix-back/: Cargo.toml  cdk.json  config.py  config.yaml  requirements.txt  serverless.yml
tinyflix-back/.serverless/: meta.json
tinyflix-back/lambda/: delete_movie.py  download_movie.py  upload_movie.py
tinyflix-back/lambdas/: delete_movie.py  download_movie.py  upload_movie.py
tinyflix-back/models/: movie.py
tinyflix-back/services/: dynamodb_service.py  s3_service.py
tinyflix-back/src/: app.py
tinyflix-back/src/lambda/delete_movie_file/: delete_file.py
tinyflix-back/src/lambda/delete_movie_metadata/: delete_metadata.py
tinyflix-back/src/lambda/download_movie_file/: download_file.py  requirements.txt
tinyflix-back/src/lambda/generate_feed/: feed.py
tinyflix-back/src/lambda/get_all_movies/: get_movies.py
tinyflix-back/src/lambda/get_feed_movies/: get_feed_movies.py
tinyflix-back/src/lambda/get_movie/: get_movie.py
tinyflix-back/src/lambda/get_subscriptions/: get_subscriptions.py
tinyflix-back/src/lambda/notify_users/: notify.py
tinyflix-back/src/models/: movie.rs
tinyflix-back/src/services/: dynamodb.rs  s3.rs  s3_service.py
tinyflix-back/src/stacks/: tinyflix_back_stack.py
tinyflix-back/src/utility/: utils.py
tinyflix-back/tinyflix-back/: app.py  file_content.txt  response.json  script.sh  upload_file.py
tinyflix-back/tinyflix-back/lambda/: download_file.py  generate_presigned_url.py  upload_file.py  upload_metadata.py
tinyflix-back/tinyflix-back/tinyflix_back/: tinyflix_back_stack.py
(+95 files in other folders)
