[package]
name = "tinyflix-back"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.0"
aws-sdk-dynamodb = "1.30.1"
aws-sdk-s3 = "1.31.0"
config = "0.14.0"
lambda_runtime = "0.11.2"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["full"] }
